<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/profile_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/profile_name"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

   <!-- <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>-->

    <PreferenceCategory
        android:title="@string/fonts_header">

        <ListPreference
            android:defaultValue="Cardinal"
            android:key="fonts"
            android:title="@string/select_font"
            app:entries="@array/font_entries"
            app:entryValues="@array/font_values"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/miscellaneous">

        <SwitchPreferenceCompat
            app:key="mode"
            app:title="@string/dark_mode" />


    </PreferenceCategory>

</PreferenceScreen>